[package]
name = "dml-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
